feat: Daily Schedule integratoin
Implemented as part of 48c52b0a-4b52-4413-83fa-0f7fba30036f
